--- a/.github/actions/mvn_verify/action.yml
+++ b/.github/actions/mvn_verify/action.yml
@@ -9,10 +9,7 @@ runs:
       key: v1-dependencies-{{ checksum "pom.xml" }}
       path: UPDATE_ME
       restore-keys: v1-dependencies-{{ checksum "pom.xml" }}
-  - name: Write .env
-    run: echo "RDBMS_PASSWORD=$RDBMS_PASSWORD" >> qqq-sample-project/.env
-    shell: bash
-  - name: Run Maven Verify
+  - name: Run Maven Verify (no sample)
     run: mvn -s .circleci/mvn-settings.xml -T4 verify
     shell: bash
   - uses: "./.github/actions/store_jacoco_site"
@@ -42,9 +39,7 @@ runs:
   - uses: "./.github/actions/store_jacoco_site"
     with:
       module: qqq-language-support-javascript
-  - uses: "./.github/actions/store_jacoco_site"
-    with:
-      module: qqq-sample-project
+  # Sample project coverage is only available when built with -P withSample
   - name: Save test results
     run: |-
       mkdir -p ~/test-results/junit/
