--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -24,6 +24,8 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>qqq-backend-core</artifactId>
+   <name>QQQ Backend Core</name>
+   <description>Core library for the QQQ low-code framework.</description>
 
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
