--- a/qqq-backend-module-filesystem/pom.xml
+++ b/qqq-backend-module-filesystem/pom.xml
@@ -24,6 +24,8 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>qqq-backend-module-filesystem</artifactId>
+   <name>QQQ Backend Module - Filesystem</name>
+   <description>Filesystem backend module for the QQQ framework.</description>
 
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
