--- a/qqq-backend-module-mongodb/pom.xml
+++ b/qqq-backend-module-mongodb/pom.xml
@@ -24,6 +24,8 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>qqq-backend-module-mongodb</artifactId>
+   <name>QQQ Backend Module - MongoDB</name>
+   <description>MongoDB backend module for the QQQ framework.</description>
 
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
