--- a/qqq-backend-module-sqlite/pom.xml
+++ b/qqq-backend-module-sqlite/pom.xml
@@ -24,6 +24,8 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>qqq-backend-module-sqlite</artifactId>
+   <name>QQQ Backend Module - SQLite</name>
+   <description>SQLite backend module for the QQQ framework.</description>
 
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
