--- a/qqq-language-support-javascript/pom.xml
+++ b/qqq-language-support-javascript/pom.xml
@@ -24,6 +24,8 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>qqq-language-support-javascript</artifactId>
+   <name>QQQ Language Support - JavaScript</name>
+   <description>JavaScript language support for the QQQ framework.</description>
 
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
