--- a/qqq-middleware-picocli/pom.xml
+++ b/qqq-middleware-picocli/pom.xml
@@ -24,6 +24,8 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>qqq-middleware-picocli</artifactId>
+   <name>QQQ Middleware - PicoCLI</name>
+   <description>PicoCLI middleware for the QQQ framework.</description>
 
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
