--- a/qqq-middleware-slack/pom.xml
+++ b/qqq-middleware-slack/pom.xml
@@ -4,7 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>qqq-middleware-slack</artifactId>
+  <artifactId>qqq-middleware-slack</artifactId>
+  <name>QQQ Middleware - Slack</name>
+  <description>Slack middleware for the QQQ framework.</description>
 
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
