--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,11 +110,16 @@ commands:
             gpg --list-secret-keys --keyid-format=long || true
       - run:
           name: Package and Publish to Sonatype Central (skip tests - already ran)
+          no_output_timeout: 20m
           command: |
-            mvn -s .circleci/mvn-settings.xml -P release -B -T4 --no-transfer-progress \
+            echo "=== Starting Maven Central deployment ==="
+            echo "Modules to build: 16"
+            echo "Build mode: Single-threaded (avoid parallel deadlocks)"
+            mvn -s .circleci/mvn-settings.xml -P release -B --no-transfer-progress \
               -DskipTests -Dmaven.test.skip=true -Dcheckstyle.skip=true \
               -Dgpg.keyname="$GPG_KEYNAME" -Dgpg.passphrase="$GPG_PASSPHRASE" \
               package deploy
+            echo "=== Maven Central deployment completed ==="
       - save_cache:
           paths:
             - ~/.m2
