--- a/pom.xml
+++ b/pom.xml
@@ -399,8 +399,8 @@ echo
    <!-- Distribution management for SNAPSHOTs (releases handled by Central Plugin) -->
    <distributionManagement>
       <snapshotRepository>
-         <id>ossrh</id>
-         <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+         <id>central-snapshots</id>
+         <url>https://central.sonatype.com/repository/maven-snapshots/</url>
       </snapshotRepository>
    </distributionManagement>
 
